<resources>
    <string name="app_name">SPay</string>
    <string name="accessibility_service_description">开启支付监听后，在没有通知的情况下也可以正常完成上交</string>
    <string name="record_statis">记录与统计</string>
    <string name="setting">设置</string>
    <string name="test">测试</string>
    <string name="about">关于</string>
    <string name="app_bar_hint">通过监听通知实现在线支付</string>
    <string name="bar_record_statis">记录与统计</string>
    <string name="bar_test">测试</string>
    <string name="bar_setting">设置</string>
    <string name="bar_about">关于</string>
    <string name="test_notify_open">开始测试通知</string>
    <string name="test_notify_close">停止测试通知</string>
    <string name="interface_base">基础信息接口</string>
    <string name="interface_base_url">输入url</string>
    <string name="interface_base_btn">测试</string>
    <string name="interface_pay">支付回调接口</string>
    <string name="interface_pay_btn">测试</string>
    <string name="interface_pay_url">输入url</string>
    <string name="interface_pay_prikey">输入密钥</string>
    <string name="interface_pay_amount">输入金额,元</string>
    <string name="interface_pay_type">输入类型</string>
    <string name="test_notify">通知</string>
    <string name="test_notify_title">通知标题</string>
    <string name="test_notify_content">通知内容</string>
    <string name="test_notify_send">发送通知</string>
    <string name="setting_base">基础信息配置</string>
    <string name="setting_base_btn">设置并更新</string>
    <string name="setting_base_url">输入接口url</string>
    <string name="setting_key">密钥配置</string>
    <string name="setting_key_edit">输入用于验证的密钥</string>
    <string name="setting_key_btn">设置</string>
    <string name="setting_cur_base">当前基础信息</string>
    <string name="record_statis_today">今日数据</string>
    <string name="record_statis_next">下</string>
    <string name="record_statis_up">上</string>
    <string name="record_statis_filter">筛选</string>
    <string name="record_statis_today_amount">收款金额</string>
    <string name="record_statis_today_num">收款笔数</string>
    <string name="record_statis_today_success_num">成功笔数</string>
    <string name="record_statis_clear">清空</string>
    <string name="interface_pay_useconfig_btn">使用配置测试</string>
    <string name="cancel">取消</string>
    <string name="filter">筛选</string>
    <string name="state">状态</string>
    <string name="type">类型</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">截止日期</string>
    <string name="select">选择</string>
    <string name="page">页</string>
    <string name="item">条</string>
    <string name="statis">统计</string>
    <string name="confirm">确认</string>
    <string name="drs_input_pay_type">输入支付类型</string>
    <string name="setting_custom_param">自定义参数配置</string>
    <string name="setting_custom_param_btn">设置</string>
    <string name="setting_custom_param_edit">支付回调接口的自定参数</string>
    <string name="accessibility_service_label">SPay</string>
    <string name="setting_accessibility">无障碍</string>

    <string-array name="drs_state">
        <item>全部</item>
        <item>成功</item>
        <item>失败</item>
    </string-array>
</resources>