<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="22dp">

        <!-- 基础信息测试 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interface_base"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/testIBaseUrlEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/interface_base_url"/>

            <Button
                android:id="@+id/testIBaseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interface_base_btn"/>

        </LinearLayout>
        <!-- 基础信息测试结束 -->

        <!-- 支付回调测试 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interface_pay"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/testIPayUrlEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/interface_pay_url"/>

            <EditText
                android:id="@+id/testIPayPriKeyEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/interface_pay_prikey"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/testIPayAmountEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/interface_pay_amount"/>

            <EditText
                android:id="@+id/testIPayTypeEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/interface_pay_type"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/testIPayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interface_pay_btn"/>

            <Button
                android:id="@+id/testIPayUseConfigBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/interface_pay_useconfig_btn"/>

        </LinearLayout>
        <!-- 支付回调测试结束 -->

        <!-- 通知测试 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_notify"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/testNotifyTitleEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/test_notify_title"/>

            <EditText
                android:id="@+id/testNotifyContentEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/test_notify_content"/>

            <Button
                android:id="@+id/testNotifySendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_notify_send"/>
        </LinearLayout>

        <Button
            android:id="@+id/testNotifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_notify_open" />

        <ListView
            android:id="@+id/testNotifyList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <!-- 通知测试结束 -->

    </LinearLayout>

</LinearLayout>