<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="22dp">

        <!-- 基础信息配置 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_base"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/settingBaseUrlEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/setting_base_url"/>

            <Button
                android:id="@+id/settingBaseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_base_btn"/>

        </LinearLayout>
        <!-- 基础信息配置结束 -->

        <!-- 密钥配置 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/setting_key"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/settingKeyEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:hint="@string/setting_key_edit"/>

            <Button
                android:id="@+id/settingKeyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_key_btn"/>

        </LinearLayout>
        <!-- 密钥配置结束 -->

        <!-- 当前基础信息 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/setting_cur_base"/>
        <TextView
            android:id="@+id/settingCurText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <!-- 当前基础信息结尾 -->

    </LinearLayout>

</LinearLayout>