<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="20sp"
        android:padding="16dp"
        android:textColor="#1C1C1C"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D3D3D3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"/>
        <Spinner
            android:id="@+id/drsState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/drs_spinner_bg"
            android:entries="@array/drs_state" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/type"/>
        <EditText
            android:id="@+id/drsType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textSize="16sp"
            android:lines="1"
            android:background="@drawable/drs_spinner_bg"
            android:hint="@string/drs_input_pay_type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/start_date"/>
        <TextView
            android:id="@+id/drsSTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/drs_spinner_bg"
            android:textColor="@color/black"
            android:text="@string/select"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/end_date"/>
        <TextView
            android:id="@+id/drsETime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/drs_spinner_bg"
            android:textColor="@color/black"
            android:text="@string/select"/>
    </LinearLayout>

</LinearLayout>